# proj-mgmt-api

./: .gitignore  Cargo.toml  schema.graphql
src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  routes.rs  schemas.rs
src/config/: mongo.rs
src/config/mongo/: impl_owner.rs  impl_project.rs
src/handler/: mutation.rs  query.rs
src/schemas/: owner.rs  project.rs  status.rs
