[package]
name = "proj-mgmt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-graphql = { version = "6.0.1", features = ["bson", "chrono", "uuid", "log"] }
async-graphql-actix-web = "6.0.1"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
error-stack = "0.3.1"
futures = "0.3.28"
log = "0.4.20"
mongodb = { version = "2.6.0", features = ["log"] }
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
